--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -69,6 +69,19 @@ body {
     }
 }
 
+.accelerometer {
+    position: relative;
+    height: 30px;
+    padding: 20px 0 0 20px
+}
+
+.ajax {
+    position: relative;
+    height: 50px;
+    padding: 120px 0 0 20px
+
+}
+
 h1 {
     font-size:24px;
     font-weight:normal;
