--- a/www/css/index.css
+++ b/www/css/index.css
@@ -126,3 +126,14 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+#footerTable {
+    width: 100%;
+}
+footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:40px;   
+    background:#ccc;
+    }
