--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -1,16 +1,5 @@
-        <style>
-            body {
-                margin: 0px;
-            }
+#accelerometer {
+    position: absolute;
+    bottom: 0;
 
-            #footerTable {
-                width: 100%;
-            }
-            footer {
-                position:absolute;
-                bottom:0;
-                width:100%;
-                height:40px;   
-                background:#ccc;
-                }
-        </style>
+}
