--- a/www/css/jquery.mobile-1.4.5.css
+++ b/www/css/jquery.mobile-1.4.5.css
@@ -1510,7 +1510,7 @@ div.ui-mobile-viewport {
 /* Buttons and icons */
 .ui-btn {
 	font-size: 16px;
-	margin: .5em 0;
+	margin: 1.3em 0;
 	padding: .7em 1em;
 	display: block;
 	position: relative;
